Avoid awful default scrollbars in most OS/Browsers, especially in horizontally scrolling text displays.

--- a/gui/public/theme.css
+++ b/gui/public/theme.css
@@ -55,3 +55,22 @@ h1 {
     --bg-color: #061a29;
   }
 } */
+
+/* Avoid awful default scrollbars in most OS/Browsers, especially in horizontally scrolling text displays. */
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 4px;
+  background: rgba(96, 96, 96, 0.1);
+  margin: 4px;
+  position: relative;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(96, 96, 96, 0.33);
+  border-radius: 1px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(96, 96, 96, 0.67);
+}
